--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -26,8 +26,8 @@
       {% endcomment %}
 
       $(".filter").attr('disabled', true);
-      $("#spinner").css("visibility", "visible");
-
+      //$("#spinner").css("visibility", "visible");
+      $(".to_label").addClass("label_animado");
       {% if not sem_edicao %}
         var edicao = $("#filterEdicao option:selected").attr("value");
       {% endif %}
@@ -91,7 +91,8 @@
                 carrega_graficos();
               {% endif %}
               carrega_pagina();
-              $("#spinner").css("visibility", "hidden");
+              //$("#spinner").css("visibility", "hidden");
+              $(".to_label").removeClass("label_animado");
               $(".filter").attr('disabled',false);
             } // else {% comment %} Ignorando resposta {% endcomment %}
  
