--- a/documentos/templates/documentos/materias_midia.html
+++ b/documentos/templates/documentos/materias_midia.html
@@ -8,11 +8,9 @@
 {% block head %}
 
   {% load static %}
-
+  {% include "tabelas_includes.html" %}
   <style>
-    td {
-      padding: 8px;
-    }
+    td {padding: 8px;}
 
     .short-text { display: none; white-space: nowrap; }
     .full-text { display: inline-block; white-space: nowrap; }
@@ -36,18 +34,21 @@
 
 {% block content %}
 
-  <span class="titulo">Matérias na Mídia {% include "informacoes.html" %}</span>
+  <span class="titulo">Matérias na Mídia</span>
 
-  {% if relatorios %}
+  {% comment %} {% include "informacoes.html" %} {% endcomment %}
+
+  <div class="atualizar">
   <div class="table-responsive">
 
     <table id="RelatoriosTable" class="table table-bordered table-hover table-sm" style="width: auto;">
       <thead class="table-info">
         <tr>
-          <th onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Anotações</th>
-          <th onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Projeto</th>
-          <th class="text-center">Documento</th>
-          <th class="text-center">URLs</th>
+          <th scope="col" class="text-center">Anotações</th>
+          <th scope="col" class="text-center">Data</th>
+          <th scope="col" class="text-center">Projeto</th>
+          <th scope="col" class="text-center">Documento</th>
+          <th scope="col" class="text-center">URLs</th>
         </tr>
       </thead>
       <tbody>
@@ -60,6 +61,12 @@
             <td>
               {% if relatorio.anotacao %}
                 {{relatorio.anotacao}}
+              {% endif %}
+            </td>
+
+            <td>
+              {% if relatorio.data %}
+                {{relatorio.data|date:"d/m/Y"}}
               {% endif %}
             </td>
 
@@ -82,14 +89,14 @@
                 {% if relatorio.link%}
                   <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;"
                      href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                    <span class="full-text" style="width: 8em;">Link da Matéria</span>
+                    <span class="full-text" style="width: 9em;">Link da Matéria</span>
                     <span class="short-text" style="width: 3em;">Link</span>
                   </a><br>
                 {% endif %}
                 {% if relatorio.documento%}
                   <a class="btn btn-light btn-outline-info btn-sm" 
                      href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
-                    <span class="full-text" style="width: 8em;">Cópia no Serv. PFE</span>
+                    <span class="full-text" style="width: 9em;">Cópia no Serv. PFE</span>
                     <span class="short-text" style="width: 3em;">Cópia</span>
                   </a>
                 {% endif %}
@@ -116,17 +123,32 @@
       </tbody>
     </table>
   </div>
-  {% else %}
-    <p>Não existem documentos disponíveis.</p>
-  {% endif %}
-
-  <br>
 
   <script>
     function carrega_pagina() {
-      $('#RelatoriosTable tr > *:nth-child(4)').hide();  
+      if($('#RelatoriosTable th').length > 0) {   // Verifica se os THs foram registrados primeiro
+        table = $('#RelatoriosTable').dataTable();
+        if(table) {
+          table.fnSetColumnVis( 4, false );  // esconde longa URL
+        }
+      }
     };
-    window.onload = carrega_pagina
+    
+    function carrega_site() {
+      var filterEdicao = localStorage.getItem("filterEdicao");
+      if (filterEdicao !== null && $("#filterEdicao option[value='"+filterEdicao+"']").length > 0 ) {
+        $('#filterEdicao').val(filterEdicao).trigger('change');
+      }
+      carrega_pagina();
+    };
+
+    window.onload = carrega_site
+
   </script>
-  
+
+
+  </div>
+
+  <br>
+
 {% endblock %}
