--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -22,9 +22,10 @@
     <ul>
         <li><a href="{% url 'planos_de_orientacao_todos' %}">Planos de Orientação</a></li>
         <li><a href="{% url 'relatos_quinzenais' 'todos' %}">Relatos Quinzenais</a></li>
-        <li><a href="{% url 'avaliacoes_pares' 'todos' %}">Avaliações de Pares</a></li>
+        <li><a href="{% url 'avaliar_entregas' 'todos' %}">Avaliações de Entregas</a></li>
         <li><a href="{% url 'informe_bancas' 1 %}">Bancas Intermediárias</a></li>
         <li><a href="{% url 'informe_bancas' 0 %}">Bancas Finais</a></li>
+        <li><a href="{% url 'avaliacoes_pares' 'todos' %}">Avaliações de Pares</a></li>
     </ul>
 
     <hr>
