--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -154,7 +154,7 @@
             </label>
             {% if proposta.anexo %}
               <br><small>Arquivo atual:
-                <a href="../..{{MEDIA_URL}}{{proposta.anexo}}">{{proposta.get_anexo}}</a>
+                <a href="http://{{request.get_host}}{{MEDIA_URL}}{{proposta.anexo}}">{{proposta.get_anexo}}</a>
               </small>
             {% endif %}
             <br><br>
