--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -22,11 +22,11 @@
     {% endif %}
     {% if documento.documento and documento.link %}
         {{documento}}
-        <a href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+        <a href="http://{{request.get_host}}{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">(documento)</a>
         <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
     {% else %}
       {% if documento.documento %}
-        <a href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
+        <a href="http://{{request.get_host}}{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
       {% endif %}
       {% if documento.link %}
         <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
@@ -38,7 +38,7 @@
         - {{documento.projeto.get_titulo}}
       {% endif %}
     {% endif %}  
-    {% if documento.usuario and documento.tipo_documento.individual %}
+    {% if documento.usuario and not documento.exame.grupo %}
       - {{ documento.usuario.get_full_name }} 
     {% endif %}
 
