melhor ordenação de nome de organizações

--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -143,7 +143,7 @@
           <option disabled value=""> -- selecione uma organização -- </option>
           {% for organizacao in organizacoes %}
             <option value="{{organizacao.id}}" {% if organizacao_selecionada.id == organizacao.id %}selected="selected"{% endif %} >
-              {{organizacao.nome}}
+              {{organizacao.nome}} ({{organizacao.sigla}})
             </option>  
           {% endfor %}
       </select>
