--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -459,7 +459,31 @@
                   {% for aula in aulas|dictsort:"endDate" %}
                     <tr class="lin_aulas ano{{aula.endDate.year}} semestre" data-mes="{{aula.endDate.month}}"
                         {% if aula.startDate|dif_dias_hoje == 0 %}style="background-color: #F0FFFF;"{% endif %}>
-                        <th class="colu" scope="row">{{aula.endDate|date:"d/m"}}<span class="t_f">/{{aula.endDate.year}}</span><span class="t_s">/{{aula.endDate|date:"y"}}</span></th>
+                        <th class="colu" scope="row">
+                          {% if user.tipo_de_usuario == 4 %}
+                            <script>
+                              var evento_{{aula.id}} = {
+                                name: "{{aula.get_title}}",
+                                location: "{{aula.location}}",
+                                observation: "{{aula.observacao}}",
+                                descricao: `{{aula.descricao}}`,
+                                responsavel: {% if aula.responsavel %}{{aula.responsavel.id}}{% else %}0{% endif %},
+                                type: "{{aula.tipo_de_evento}}",
+                                startDate: new Date({{aula.startDate.year}},{{aula.startDate.month|add:-1}},{{aula.startDate.day}}),
+                                endDate: new Date({{aula.endDate.year}},{{aula.endDate.month|add:-1}},{{aula.endDate.day}}),
+                              };
+                            </script>
+                            <span style="cursor:pointer;" onclick="editEvent(evento_{{aula.id}})">
+                          {% else %}
+                            <span>
+                          {% endif %}
+                            {{aula.endDate|date:"d/m"}}
+                            <span class="t_f">/{{aula.endDate.year}}</span>
+                            <span class="t_s">/{{aula.endDate|date:"y"}}</span>
+                          </span>
+                        </th>
+                        
+                        
                         <td class="colu">
                           {{aula.descricao}} 
                           {% if aula.responsavel %}({{aula.responsavel.get_full_name}}){% endif %}
