--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -463,7 +463,7 @@
                           {% if user.tipo_de_usuario == 4 %}
                             <script>
                               var evento_{{aula.id}} = {
-                                id: {{evento.id}},
+                                id: {% if aula.id %}{{aula.id}}{% else %}null{% endif %},
                                 name: "{{aula.get_title}}",
                                 location: "{{aula.location}}",
                                 observation: "{{aula.observacao}}",
