ajustes de layout de seleção de bancas

--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -65,7 +65,7 @@
 
   <script>
 
-    var refInterval = window.setInterval('update()', 120000); // 2 minutos
+    window.setInterval('update()', 120000); // 2 minutos
 
     var update = function() {
         $.ajax({
